# string-to-int

./: CMakeLists.txt  Readme.md
include/: stringToInt.h
src/: CMakeLists.txt  stringToInt.c
tst/: CMakeLists.txt  testStringToInt.cpp
